# BE18-PersonnelApi/index.js
@@ -1,4 +1,4 @@
-"use strict"
+"use strict";
 /* -------------------------------------------------------
     EXPRESS - Personnel API
 ------------------------------------------------------- */
@@ -6,55 +6,67 @@
     $ npm i express dotenv mongoose express-async-errors
 */
 
-const express = require('express')
-const app = express()
+const express = require("express");
+const app = express();
 
 /* ------------------------------------------------------- */
 // Required Modules
 
 //* envVariables to process.env
-require('dotenv').config()
+require("dotenv").config();
 const PORT = process.env.PORT || 8000;
 
 //? asyncErrors to errorHandler
-require("express-async-errors")
+require("express-async-errors");
 
 /* -------------------------------------------------------------------------- */
 /*                               Configurations                               */
 /* -------------------------------------------------------------------------- */
 
 //! database connection
-const {dbConnection} = require("./src/configs/dbConnection")
-dbConnection()
-
-
+const { dbConnection } = require("./src/configs/dbConnection");
+dbConnection();
 
 /* ------------------------------------------------------- */
-// //* MORGAN LOGGING
-// // https://expressjs.com/en/resources/middleware/morgan.html
-// // https://github.com/expressjs/morgan
-// //? npm i morgan
+//* MORGAN LOGGING
+// https://expressjs.com/en/resources/middleware/morgan.html
+// https://github.com/expressjs/morgan
+//? npm i morgan
 
 // const morgan = require("morgan");
 
-// // app.use(morgan("combined"))
-// // app.use(morgan("common"))
-// // app.use(morgan("dev"))
-// // app.use(morgan("short"))
-// // app.use(morgan("tiny"))
-// // app.use(morgan('IP=:remote-addr - :remote-user | TIME=[:date[clf]] | "METHOD=:method | URL=:url | HTTP/:http-version" | STATUS=:status | LENGTH=:res[content-length] |  REF=":referrer" | AGENT=":user-agent"'))
+// app.use(morgan("combined"))
+// app.use(morgan("common"))
+// app.use(morgan("dev"))
+// app.use(morgan("short"))
+// app.use(morgan("tiny"))
+// app.use(morgan('IP=:remote-addr - :remote-user | TIME=[:date[clf]] | "METHOD=:method | URL=:url | HTTP/:http-version" | STATUS=:status | LENGTH=:res[content-length] |  REF=":referrer" | AGENT=":user-agent"'))
 
-// //! write logs to a file
-// // create a write stream (in append mode)
+//! write logs to a file
+// create a write stream (in append mode)
 // const fs = require("node:fs") //* dosya işlemleri için built-in module
-// var accessLogStream = fs.createWriteStream("./access.log", { flags: 'a+' })  // otomatik acces dosyası oluşturur
+// var accessLogStream = fs.createWriteStream("./access.log", { flags: 'a+' })
 
 // setup the logger
 // app.use(morgan('combined', { stream: accessLogStream }))
+// app.use(
+//   morgan("combined", {
+//     stream: fs.createWriteStream("./access.log", { flags: "a+" }),
+//   })
+// );
+//! write logs to a file day by day
+// const fs = require("node:fs");
 
+// const now = new Date().toISOString().split("T")[0]
+// console.log(typeof now, now)
 
+// app.use(
+//   morgan("combined", {
+//     stream: fs.createWriteStream(`./logs/${now}.log`, { flags: "a+" }),
+//   })
+// );
 
-
+/* -------------------------------------------------------------------------- */
 /*                                Documentation                               */
 /* -------------------------------------------------------------------------- */
 // https://swagger-autogen.github.io/docs/
@@ -63,81 +75,95 @@ dbConnection()
 // $ npm i redoc-express
 
 //* JSON
-app.use("/documents/json", (req, res) => {
-    res.sendFile("swagger.json", { root: "." });
-  });
-  
-  //! SWAGGER
-  const swaggerUi = require("swagger-ui-express");
-  const swaggerDocument = require("./swagger.json");
-  
-  app.use(
-    "/documents/swagger",
-    swaggerUi.serve,
-    swaggerUi.setup(swaggerDocument, {
-      swaggerOptions: {
-        persistAuthorization: true,
-      },
-    })
-  );
+// app.use("/documents/json", (req, res) => {
+//   res.sendFile("swagger.json", { root: "." });
+// });
+
+//! SWAGGER
+// const swaggerUi = require("swagger-ui-express");
+// const swaggerDocument = require("./swagger.json");
+
+// app.use(
+//   "/documents/swagger",
+//   swaggerUi.serve,
+//   swaggerUi.setup(swaggerDocument, {
+//     swaggerOptions: {
+//       persistAuthorization: true,
+//     },
+//   })
+// );
 
 //? REDOC
-const redoc = require("redoc-express");
-app.use("/documents/redoc", redoc({
-  title: "Personnel Api",
-  specUrl: '/documents/json'
-}))
-
+// const redoc = require("redoc-express");
+// app.use("/documents/redoc", redoc({
+//   title: "Personnel Api",
+//   specUrl: '/documents/json'
+// }))
 
 /* -------------------------------------------------------------------------- */
 /*                                 MiddleWares                                */
 /* -------------------------------------------------------------------------- */
 
 //* accept json
-app.use(express.json())
+app.use(express.json());
 
-//* Logging
-app.use(require("./src/middlewares/logging"))
+app.use(require("./src/middlewares/logging"));
 
 //*Filter,Search,Sort,Pagination(res.getModelList)
-app.use(require("./src/middlewares/findSearchSortPagi"))
+app.use(require("./src/middlewares/findSearchSortPagi"));
 
-app.use(require("./src/middlewares/authentication"))
+app.use(require("./src/middlewares/authentication"));
 
 /* -------------------------------------------------------------------------- */
 /*                                   Routes                                   */
 /* -------------------------------------------------------------------------- */
 
-app.all("/",(req,res)=> {
-    res.send("Welcome to the Personnel API")
-})
-
+// app.all("/", (req, res) => {
+//   // res.send("Welcome to the Personnel API")
+//   res.send({
+//     message: "Welcome to the Personnel API",
+//     user: req.user,
+//   });
+// });
+app.all("/", (req, res) => {
+  // res.send("Welcome to the Personnel API")
+  res.send({
+    message: "Welcome to the Personnel API",
+    user: req.user,
+    api: {
+      documents: {
+        swagger: "/documents/swagger",
+        redoc: "/documents/redoc",
+        json: "/documents/json",
+      },
+    },
+  });
+});
+// console.log("6682f675c85e532d286f602e"+Date.now())
 // app.use("/departments", require("./src/routes/department.router"));
 
 // app.use("/personnels", require("./src/routes/personnel.router"));
 
-// app.use('/tokens', require('./src/routes/token.router'))
+// app.use("/tokens",require("./src/routes/token.router"))
 
-// app.use(require('./src/routes/index')) //! üstteki satırları route'daki index'e aktarıp bu satırla çağırdık. 
-app.use(require('./src/routes/')) //^JS index isimlendirmesini default kabul ettiği için burada ('./src/routes/') yazmamız da yeterli.
+// app.use(require("./src/routes/index"));
+app.use(require("./src/routes/"));
 
 //* eşleşmeyen routeları yakalar
-app.use((req,res,next)=> {
-    res.status(404).send({
-        error:true,
-        message: "Route not found!"
-    })
-})
+app.use((req, res, next) => {
+  res.status(404).send({
+    error: true,
+    message: "Route not found!",
+  });
+});
 
 /* ------------------------------------------------------- */
 
 // errorHandler:
-app.use(require('./src/middlewares/errorHandler'))
+app.use(require("./src/middlewares/errorHandler"));
 
 // RUN SERVER:
-app.listen(PORT, () => console.log('http://127.0.0.1:' + PORT))
+app.listen(PORT, () => console.log("http://127.0.0.1:" + PORT));
 
 /* ------------------------------------------------------- */
-
-
-// require('./src/helpers/sync')()
+// require("./src/helpers/sync")()
